--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   mask_text_input_formatter: ^2.0.0
   badges: 
   intl: ^0.17.0
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
