--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   badges: 
   intl: ^0.17.0
   qr_flutter: ^4.1.0
+  add_to_cart_animation: ^0.0.7
+  fluttertoast: ^8.0.8 
 
 dev_dependencies:
   flutter_test:
